--- a/project-h5/package.json
+++ b/project-h5/package.json
@@ -8,14 +8,19 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "build:dev": "cross-env NODE_ENV=development env_config=dev node build/build.js",
     "build:pre": "cross-env NODE_ENV=preview env_config=pre node build/build.js",
-    "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
+    "build:prd": "cross-env NODE_ENV=production env_config=prod node build/build.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@antv/data-set": "^0.10.1",
+    "@antv/f2": "^3.2.4",
     "axios": "^0.18.0",
-    "vant": "^1.3.7",
+    "cross-env": "^5.2.0",
+    "js-cookie": "^2.2.0",
+    "vant": "^1.4.3",
+    "viser-vue": "^2.4.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -58,14 +63,15 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^14.2.2",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "vux-loader": "^1.2.9",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "yaml-loader": "^0.5.0"
   },
   "engines": {
     "node": ">= 6.0.0",
